--- a/app/views/lowfidelity/cherished.html
+++ b/app/views/lowfidelity/cherished.html
@@ -96,7 +96,7 @@
 
     <div class="govuk-radios__item">
       <label class="govuk-label govuk-radios__label" for="cherished">
-        Add a custom first line (for example: Flat B, Wirral Cottage, Room 17)
+        Update a custom first line (for example: Flat B, Wirral Cottage, Room 17)
       </label>
       <input class="govuk-radios__input">
     </div>
