--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,7 +13,8 @@
         Sandbox
         <span class="govuk-caption-xl">{{releaseVersion}}</span>
       </h1>{{releaseVersion | log }}
-          <a href="/lowfidelity/cherished">Content amendments for 'cherished' address lines</a>
+          <p><a href="/lowfidelity/cherished">Content amendments for 'cherished' address lines</a></p>
+          <p><a href="/lettergenerator/first-or-second">Letter generator</a></p>
     </div>
   </div>
 
