--- a/app/views/lettergenerator/add-control-measures.html
+++ b/app/views/lettergenerator/add-control-measures.html
@@ -45,7 +45,7 @@
                 <div class="govuk-checkboxes__item">
                   <input class="govuk-checkboxes__input" id="screen-environment" name="add-control-measure-3" type="checkbox" value="screen-environment">
                   <label class="govuk-label govuk-checkboxes__label" for="screen-environment">
-                    you must be dealt with in screen environment
+                    you can only attend appointments by video call
                   </label>
                 </div>
 
